# aimdware

./: .gitignore  .pre-commit-config.yaml  README.md
.gitea/workflows/: concurrency.yaml
.github/workflows/: client-build.yml
backend/: .gitignore  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 1cc659f78871_0002_unique_session_turn.py  ad7b66d6bff9_0001_initial_schema.py  b984da6ac5c5_0003_add_assignment_to_context_records.py  c0a1d2e3f4b5_0004_add_student_id.py
backend/scripts/: seed_for_e2e.py
backend/src/aimdware_backend/: admin_auth.py  admin_cli.py  auth.py  db.py  jbox.py  main.py  models.py  roster.py  settings.py
backend/src/aimdware_backend/routes/: admin.py  ingest.py
backend/tests/: conftest.py  test_admin.py  test_admin_cli.py  test_auth.py  test_ingest.py  test_jbox_real.py  test_models.py  test_roster.py  test_settings.py
llm-client/: .gitignore  .oxlintrc.json  aimdware.example.yaml  package.json  tsconfig.json
llm-client/src/: capture.test.ts  capture.ts  config.test.ts  config.ts  eviction.test.ts  eviction.ts  handler.test.ts  handler.ts  ingest-worker.test.ts  ingest-worker.ts  ingest.test.ts  ingest.ts  main-sync.test.ts  (+16 more)
scripts/: smoke_e2e.sh  smoke_e2e_agent.sh  smoke_e2e_real_tbox.sh
test-functional/: .current  README.md  bringup.sh  inspect.sh  teardown.sh
test-scripts/: smoke_e2e.sh  smoke_e2e_agent.sh  smoke_e2e_real_tbox.sh
wiki/: admin-script.md  architecture.md  backend.md  design-notes.md  llm-client.md  student-deployment-zh.md  student-setup.md  ta-deployment.md  threat-model.md
(+55 files in other folders)
