[project]
name = "aimdware-backend"
version = "0.0.0"
description = "aimdware backend: ingest API + token validation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "httpx>=0.28.1",
]

[project.scripts]
aimdware-admin = "aimdware_backend.admin_cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "anyio>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aimdware_backend"]

# Make this directory a workspace ROOT so it is not auto-included as a
# member of any parent workspace (e.g. $HOME/pyproject.toml).
[tool.uv.workspace]
members = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
asyncio_mode = "auto"
